Fix line spacing (eliminate overlap with code bg) and darken background for code.

--- a/docs/_sass/code.scss
+++ b/docs/_sass/code.scss
@@ -4,7 +4,7 @@
 // stylelint-disable selector-no-qualifying-type, declaration-block-semicolon-newline-after,declaration-block-single-line-max-declarations, selector-no-type, selector-max-type
 
 code {
-  padding: 0.2em 0.15em;
+  padding: 0.1em 0.1em;
   font-weight: 400;
   background-color: $code-background-color;
   border: $border $border-color;
@@ -12,7 +12,7 @@ code {
 }
 
 pre.highlight {
-  padding: $sp-3;
+  padding: $sp-1;
   margin-bottom: 0;
   -webkit-overflow-scrolling: touch;
   background-color: $code-background-color;
