--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -5,7 +5,7 @@
 // $body-font-family: -apple-system, BlinkMacSystemFont, "helvetica neue", helvetica, roboto, noto, "segoe ui", arial, sans-serif;
 // $mono-font-family: "SFMono-Regular", Menlo, Consolas, Monospace;
 $root-font-size: 12px;         // Base font-size for rems
-$body-line-height: 1.2;
+// $body-line-height: 1.4;
 // $body-heading-line-height: 1.15;
 //
 // //
